<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <EditText
        android:id="@+id/tv_input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
        android:id="@+id/btn_open_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_input_data"
        android:text="@string/btnOpenActivity"/>
    <TextView
        android:id="@+id/lbl_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/btn_open_activity"/>

    <Button
        android:id="@+id/btn_go_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoHome"
        app:layout_constraintTop_toBottomOf="@+id/lbl_result"
        />
    <Button
        android:id="@+id/btn_go_browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGoBrowse"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_home"
        />
    <Button
        android:id="@+id/btn_calculator_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculatorOne"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_browse"
        />
    <Button
        android:id="@+id/btn_calculator_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculatorTwo"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculator_one"
        />
    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCall"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculator_two"
        />


</androidx.constraintlayout.widget.ConstraintLayout>